executed no jobs. Otherwise it immediately runs again, on the assumption that
there will be more jobs that should be executed sooner rather than later. The
upshot is that files will now be distributed much sooner after publishling.
[David]

=item *

Allow searching for stories and media assets by ID and UUID. Suggested by
Phillip Smith (Ticket #186). [Greg Heo]

=back

=head2 Bug Fixes

=over

=item *

Fixed bug in bric_ftpd where the ftp PWD command returns an incorrect path
(missing the site name).  Some ftp clients (eg. FileZilla) call PWD and use
this path after changing directories. [Adrian Yee]

=item *

In the event of a publish failure, a story and media document no longer has
its publish status, date, and first publish date updated (Bug #200). [David]


=back

=head1 Version 2.0.1 ()

=head2 Improvements

=over

=item *

Added C<SKIP_SSL_REDIRECT> F<bricolage.conf> directive. This directive
prevents Bricolage from redirecting to and from an SSL URL when C<SSL_ENABLE>
is turned on. The case for this is when Bricolage is running behind a reverse
proxy server that's handling SSL mappsings. Thanks to Alex Krohn for the
report. [David]

=item *

Added the "object" format for datetime values. Pass "object" as the formatting
string and a L<DateTime> object will be returned, rather than a string.
[David]

=item *

Refactored the SFTP mover to do proper error handling. Also removed the code
that "escapes" file names, as with more recent versions of Net::SSH2 it left
the backslashes in the file names. [David]

=item *

Bricolage now supports Apache 2 MPMs other than Prefork. YMMV (Bug #188).
[David]

=back

=head2 Bug Fixes

=over

=item *

Fixed a bug in the L<Bric::Util::ApacheReq> tests where they would fail if the
C<LISTEN_PORT> or C<SSL_PORT> F<bricolage.conf> directives were anything other
than 80 and 443, respectively. Thanks to Héctor Daniel Cortés González for the
report. [David]

=item *
