@@ -38,17 +38,11 @@ CREATE TABLE story (
     id                INTEGER         NOT NULL
                                       DEFAULT NEXTVAL('seq_story'),
     uuid              TEXT            NOT NULL,
-    priority          INT2            NOT NULL
-                                      DEFAULT 3
-                                      CONSTRAINT ck_story__priority
-                                        CHECK (priority BETWEEN 1 AND 5),
     source__id        INTEGER         NOT NULL, 
     usr__id           INTEGER,
     element_type__id  INTEGER         NOT NULL,
-    primary_uri       VARCHAR(128),
     first_publish_date TIMESTAMP,
     publish_date      TIMESTAMP,
-    expire_date       TIMESTAMP,
     current_version   INTEGER         NOT NULL,
     published_version INTEGER,
     workflow__id      INTEGER         NOT NULL,
@@ -73,7 +67,13 @@ CREATE TABLE story_instance (
     name           VARCHAR(256),
     description    VARCHAR(1024),
     story__id      INTEGER      NOT NULL,
+    primary_uri    VARCHAR(128),
+    priority       INT2         NOT NULL
+                                DEFAULT 3
+                                CONSTRAINT ck_story__priority
+                                CHECK (priority BETWEEN 1 AND 5),
     version        INTEGER,
+    expire_date    TIMESTAMP,
     usr__id        INTEGER      NOT NULL,
     slug           VARCHAR(64),
     primary_oc__id INTEGER      NOT NULL,
@@ -151,7 +151,6 @@ CREATE TABLE story__contributor (
 
 -- story
 CREATE INDEX idx_story__uuid ON story(uuid);
-CREATE INDEX idx_story__primary_uri ON story(LOWER(primary_uri));
 CREATE INDEX fkx_usr__story ON story(usr__id);
 CREATE INDEX fkx_source__story ON story(source__id);
 CREATE INDEX fkx_element_type__story ON story(element_type__id);
@@ -165,6 +164,7 @@ CREATE INDEX idx_story_instance__cover_date ON story_instance(cover_date);
 CREATE INDEX idx_story_instance__name ON story_instance(LOWER(name));
 CREATE INDEX idx_story_instance__description ON story_instance(LOWER(description));
 CREATE INDEX idx_story_instance__slug ON story_instance(LOWER(slug));
+CREATE INDEX idx_story_instance__primary_uri ON story_instance(LOWER(primary_uri));
 CREATE UNIQUE INDEX udx_story__story_instance ON story_instance(story__id, version, checked_out);
 CREATE INDEX fkx_usr__story_instance ON story_instance(usr__id);
 CREATE INDEX fkx_primary_oc__story_instance ON story_instance(primary_oc__id);
