@@ -14,28 +14,28 @@ sub test_fetch_objects: Test(4) {
     eval {
     my $sth = prepare(q{
         INSERT INTO story (
-            site__id, uuid, source__id, desk__id, element_type__id, current_version, workflow__id, primary_uri, published_version
+            site__id, uuid, source__id, desk__id, element_type__id, current_version, workflow__id, published_version
         ) VALUES (
-            ?, ?, ?, ?, ?, ?, ?, ?, ?
+            ?, ?, ?, ?, ?, ?, ?, ?
         )
     });
 
     for my $row (
-        [100, 1, 1, 0, 1, 1, 0, 1, undef],
-        [100, 1, 1, 0, 1, 1, 0, undef, 4],
-        [100, 1, 1, 0, 1, 1, 0, 3, 5],
+        [100, 1, 1, 0, 1, 1, 0, undef],
+        [100, 1, 1, 0, 1, 1, 0, 4],
+        [100, 1, 1, 0, 1, 1, 0, 5],
 
-        [100, 2, 1, 0, 2, 2, 0, 1, 4],
-        [100, 2, 1, 0, 2, 2, 0, 2, 5],
-        [100, 2, 1, 0, 2, 2, 0, 3, 6],
+        [100, 2, 1, 0, 2, 2, 0, 4],
+        [100, 2, 1, 0, 2, 2, 0, 5],
+        [100, 2, 1, 0, 2, 2, 0, 6],
 
-        [100, 3, 1, 0, 3, 3, 0, 3, undef],
-        [100, 3, 1, 0, 3, 3, 0, 6, 0],
-        [100, 3, 1, 0, 3, 3, 0, 4, 0],
+        [100, 3, 1, 0, 3, 3, 0, undef],
+        [100, 3, 1, 0, 3, 3, 0, 0],
+        [100, 3, 1, 0, 3, 3, 0, 0],
 
-        [100, 4, 1, 0, 4, 4, 0, 4, 0],
-        [100, 4, 1, 0, 4, 4, 0, 0, 8],
-        [100, 4, 1, 0, 4, 4, 0, 0, 0],
+        [100, 4, 1, 0, 4, 4, 0, 0],
+        [100, 4, 1, 0, 4, 4, 0, 8],
+        [100, 4, 1, 0, 4, 4, 0, 0],
     ) {
         execute($sth, @$row);
     }
@@ -52,7 +52,6 @@ sub test_fetch_objects: Test(4) {
     my $sqltemp=$sql;
     my $fields = [ qw( site__id uuid source__id desk__id element_type__id current_version workflow__id alias_id ) ];
     my $stories = fetch_objects('Bric::Biz::Asset', \$sql, $fields, 2, undef, undef , undef);
-#    print ('//'.$stories->[0]{priority}.'//');
     $_->{alias_id} = [sort { $a <=> $b } @{$_->{alias_id}}] for @$stories;
     my $expect = [
              bless( {
